--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SoftvisionCommunityTracker">
         <activity
-            android:name=".MainActivity"
+            android:name=".ManageCommunityActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.SoftvisionCommunityTracker.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,6 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
