created UI for Create Community Screen with alert dialog for save button

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SoftvisionCommunityTracker">
         <activity
-            android:name=".MainActivity"
+            android:name=".ManageCommunityActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.SoftvisionCommunityTracker.NoActionBar">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.SoftvisionCommunityTracker.NoActionBar">
         </activity>
     </application>
 
