added function and fixed bugs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,10 @@
         <activity
             android:name=".ManageCommunityActivity"
             android:exported="true"
-            android:theme="@style/Theme.SoftvisionCommunityTracker.NoActionBar">
-
+            android:theme="@style/Theme.SoftvisionCommunityTracker.NoActionBar"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
