--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         <activity
             android:name=".ManageCommunityActivity"
             android:exported="true"
-            android:theme="@style/Theme.SoftvisionCommunityTracker.NoActionBar">
+            android:theme="@style/Theme.SoftvisionCommunityTracker.NoActionBar"
+            android:windowSoftInputMode="adjustPan">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
