Add UI Test sample
Added automated UI Test for Community Tracker

--- a/build.gradle
+++ b/build.gradle
@@ -16,3 +16,8 @@ buildscript {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    coreVersion = "1.5.0-alpha01"
+    runnerVersion = "1.5.0-alpha04"
+}
