Consume CREATE Endpoint and refresh list community

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SoftvisionCommunityTracker">
         <activity
+            android:name=".ResourceActivity"
+            android:exported="false" />
+        <activity
             android:name=".ManageCommunityActivity"
             android:exported="true"
             android:theme="@style/Theme.SoftvisionCommunityTracker.NoActionBar"
